# vpp-ndpi

./: .gitmodules  CMakeLists.txt  Dockerfile.base  Dockerfile.ci  Dockerfile.demo  README.md  compose.demo.yaml
.devcontainer/: devcontainer.json
.github/workflows/: base-image.yml  ci.yml
exporter/: Dockerfile  go.mod  go.sum
exporter/cmd/vpp-exporter/: main.go
exporter/internal/collector/: collector.go
killercoda/packetlens-demo/: finish.md  foreground.sh  index.json  intro.md
killercoda/packetlens-demo/step1/: text.md  verify.sh
killercoda/packetlens-demo/step2/: text.md  verify.sh
killercoda/packetlens-demo/step3/: text.md
labs/grafana/dashboards/: flowlens-ndpi.json
labs/grafana/provisioning/dashboards/: default.yml
labs/prometheus/: prometheus.yml
scripts/: build-base.sh  build-vpp-debs.sh  demo-entrypoint.sh
src/plugins/ndpi/: CMakeLists.txt  ndpi.api  ndpi.c  ndpi.h  ndpi_api.c  ndpi_classify_callback.c  ndpi_classify_callback.h  ndpi_cli.c  ndpi_counters.c  ndpi_flow.c  ndpi_ndpi.c  ndpi_stats.c  node_observe.c
test/: conftest.py  test_ndpi.py  test_smoke.py  test_stats.py
